docs: annotate Phase 3 advanced features completion order